updated plugin package